# hackathon2-phase3-chatbot

./: README.md
.claude/agents/: AI Orchestration Agent.md  Authentication Agent.md  Backend Agent.md  Chat Backend Agent.md  Chatbot UI Agent.md  Database Agent.md  Frontend Agent.md  MCP Tools Agent.md  Orchestrator Agent.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: Dockerfile  FIX_POSTGRESQL_TYPE_ERROR.md  README.md  main.py  migrate_conversation_id.py  pyproject.toml  test_task.py  tmpclaude-f3ce-cwd
backend/agents/: todo_agent.py
backend/dependencies/: auth.py  database.py
backend/docs/: manual_test_cases.md
backend/mcp/tools/: __init__.py  error_handling.py  task_operations.py
backend/models/: conversation.py  message.py  task.py  user.py
backend/prompts/: examples.txt  todo_agent_system_prompt.txt
backend/routers/: auth.py  chat.py  tasks.py
backend/schemas/: auth.py  task.py
backend/todo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/utils/: auth.py  errors.py  logging.py  security.py
backend/utils/gemini_adapter/: __init__.py
frontend/: README.md  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/src/lib/: api.ts  (+4 more)
history/adr/: 001-auth-architecture.md
specs/001-auth-integration/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-glass-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-backend/: plan.md  spec.md  tasks.md
specs/1-ai-chatbot-integration/: spec.md  tasks.md
(+80 files in other folders)
